--- a/src/modules/pages/faq/Faq.scss
+++ b/src/modules/pages/faq/Faq.scss
@@ -10,6 +10,7 @@
   background-position-x: center;
   background-size: cover;
   background-attachment: fixed;
+
   .faq-box {
     display: flex;
     flex-direction: column;
@@ -20,23 +21,33 @@
     background: $color-11;
     border: none;
     border-radius: 7px;
-    .h2-faq {
-      color: $color-3;
-      font-weight: 400;
-      font-size: 24px;
+
+    .title-faq {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
       height: 35px;
-      line-height: 35px;
-      padding-left: 35px;
-      margin-bottom: 25px;
-      text-align: center;
+      width: 100%;
+
+      .h2-faq {
+        color: $color-3;
+        font-weight: 400;
+        font-size: 24px;
+        height: 35px;
+        line-height: 35px;
+        padding-left: 35px;
+        text-align: center;
+      }
     }
+
     .wrapper-tabs-faq {
       display: flex;
       flex-direction: row;
       width: 100%;
       margin: 0 auto;
       padding: 15px;
-      height: 650px;
+      height: auto;
+
       .tabs {
         display: flex;
         flex-direction: column;
@@ -44,6 +55,10 @@
         width: auto;
         height: 100%;
         margin-right: 25px;
+        position: sticky;
+        top: 50px;
+        bottom: 0;
+
         .btn-click {
           cursor: pointer;
           width: 200px;
@@ -53,33 +68,39 @@
           border: none;
           border-radius: 5px;
           transition: all 0.5s ease-out;
-          color: $color-3;          
+          color: $color-3;
           font-weight: 400;
           font-size: 16px;
+
           &:hover {
             color: white;
             background: $color-22;
           }
+
           &:disabled {
             background: $color-4;
             color: white;
           }
         }
       }
+
       .content {
         width: 100%;
         margin: 15px;
         padding: 20px;
+
         .div-id-tab {
           display: flex;
           width: 100%;
           height: 100%;
+
           .tab-one {
             display: flex;
             flex-direction: column;
             width: 100%;
             min-height: 600px;
             height: auto;
+
             .title {
               color: $color-3;
               width: 100%;
@@ -88,6 +109,7 @@
               font-weight: 400;
               font-size: 24px;
             }
+
             .info {
               color: $color-3;
               width: 100%;
@@ -96,25 +118,28 @@
               font-weight: 400;
               font-size: 16px;
             }
+
             .lists {
               display: flex;
               flex-direction: column;
               width: 100%;
               height: 100%;
               padding-top: 20px;
-              overflow: auto;
               padding-right: 15px;
+
               .list-one {
                 width: 100%;
                 height: 100%;
                 display: flex;
                 flex-direction: column;
+
                 .one-input {
                   position: absolute;
                   left: -10000px;
                   opacity: 0;
                   z-index: -1;
                 }
+
                 .one-label {
                   display: flex;
                   justify-content: space-between;
@@ -128,9 +153,11 @@
                   font-size: 16px;
                   cursor: pointer;
                   transition: all 0.25s ease;
+
                   &:hover {
                     background: $color-7;
                   }
+
                   &::after {
                     content: "\276F";
                     width: 16px;
@@ -139,6 +166,7 @@
                     transition: all 0.35s;
                   }
                 }
+
                 .one-content-h3 {
                   width: 100%;
                   max-height: 0;
@@ -169,12 +197,14 @@
   border-bottom-left-radius: 6px;
   border-bottom-right-radius: 6px;
 }
+
 .one-input:checked ~ .one-label {
   margin-bottom: 0px !important;
   border-bottom-left-radius: 0px !important;
   border-bottom-right-radius: 0px !important;
   background: $color-7 !important;
   color: $color-8 !important;
+
   &::after {
     transform: rotate(90deg);
     color: $color-8;
