--- a/src/modules/components/my-markers/My-markers.scss
+++ b/src/modules/components/my-markers/My-markers.scss
@@ -179,6 +179,27 @@
       height: auto;
       margin-bottom: 25px;
 
+      .go-back {
+        background: transparent;
+        border: none;
+        border-radius: 0px;
+        font-weight: 400;
+        font-size: 14px;
+        text-align: center;
+        color: $color-3;
+        margin-bottom: 15px;
+        cursor: pointer;
+        outline: none;
+        transition: all 0.15s ease;
+
+        &:hover,
+        &:active,
+        &:focus {
+          outline: none;
+          color: $color-4;
+        }
+      }
+
       .input-str {
         width: auto;
         min-width: 50%;
@@ -192,25 +213,24 @@
         outline: none !important;
         padding: 7px;
         background: $color-7;
-        position: relative;
 
         &:hover,
         &:active,
         &:focus {
           outline: none;
         }
-      }
 
-      .option-list, rc-virtual-list-holder-inner {
-        padding: 5px;
-        background: #47ffe9;
-        color: $color-4;
-        z-index: 100000;
+        .option-list {
+          color: $color-3;
+          background: $color-7;
+          font-size: 14px;
+          border-radius: 7px;
 
-        &:hover,
-        &:active,
-        &:focus {
-          outline: none;
+          &:hover,
+          &:active,
+          &:focus {
+            outline: none;
+          }
         }
       }
     }
