--- a/src/modules/components/my-prizes/My-prizes.scss
+++ b/src/modules/components/my-prizes/My-prizes.scss
@@ -1,1 +1,56 @@
 @import "../../../Variables.scss";
+
+@keyframes money {
+  0% {
+    background: url("../../../bases/еnchanted-item/Netherite_Pickaxe.gif");
+  }
+  50% {
+    background: url("../../../bases/еnchanted-item/Netherite_Axe.gif");
+  }
+  100% {
+    background: url("../../../bases/еnchanted-item/Netherite_Pickaxe.gif");
+  }
+}
+
+.box-prizes {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+
+  .prizes-h4 {
+    width: auto;
+    height: 35px;
+    line-height: 35px;
+    color: $color-3;
+    font-size: 24px;
+    font-weight: 400;
+    margin: 30px auto;
+  }
+
+  .one-prizes {
+    width: 100%;
+    height: 150px;
+    display: flex;
+    flex-direction: row;
+
+    .img-block {
+      display: flex;
+      width: 150px;
+      height: 150px;
+
+      .animation-bg {
+        width: 100%;
+        height: 100%;
+        transition: all 1s ease;
+        animation: 6s infinite money;
+      }
+    }
+
+    .prizes-all {
+      display: flex;
+      width: 90%;
+      height: auto;
+    }
+  }
+}
