--- a/src/modules/components/my-markers/My-markers.scss
+++ b/src/modules/components/my-markers/My-markers.scss
@@ -89,6 +89,7 @@
 
       .colums-1 {
         display: flex;
+        width: 100%;
         flex-direction: row;
         justify-content: flex-start;
         margin: auto 0;
@@ -97,7 +98,6 @@
           height: 40px;
           line-height: 40px;
           color: $color-3;
-          width: 50px;
           width: 50px;
           text-align: center;
         }
@@ -281,7 +281,7 @@
       height: auto;
       display: flex;
       flex-direction: row;
-      margin-top: 100%;
+      margin-top: auto;
 
       .bt-all {
         width: 140px;
