--- a/src/modules/components/button/Button.scss
+++ b/src/modules/components/button/Button.scss
@@ -9,19 +9,30 @@
   }
 }
 
-.style-button {
-  width: 300px;
-  height: 75px;
-  line-height: 75px;
-  font-size: 30px;
-  background-color: $color-4;
-  border-radius: 22px;
-  border: none;
-  margin: 0 auto;
-  overflow: hidden;
-  position: relative;
-  cursor: pointer;
+.style-all {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  text-decoration: none;
+
+  .style-button {
+    width: 300px;
+    height: 75px;
+    line-height: 75px;
+    font-size: 30px;
+    text-decoration: none;
+    background-color: $color-4;
+    border-radius: 22px;
+    border: none;
+    margin: 0 auto;
+    overflow: hidden;
+    position: relative;
+    cursor: pointer;
+  }
 }
+
 
 .style-button:before {
   content: " ";
