--- a/src/App.scss
+++ b/src/App.scss
@@ -40,9 +40,9 @@ div#root {
   background-color: rgb(34, 78, 105);
 }
 
-.main-wrapper-bg{
+.main-wrapper-bg {
   width: 100%;
-  height: 100%;
+  height: auto;
   background: url(./bases/assets/Main-background.webp);
   background-repeat: no-repeat;
   background-position-x: center;
@@ -50,8 +50,17 @@ div#root {
   background-attachment: fixed;
 }
 
-.main-wrapper-bg-scrolling-color{
+.main-wrapper-bg-scrolling-color {
   background: $color-7 !important;
+}
+
+.class-z-index-10000 {
+  position: relative;
+  z-index: 10000;
+}
+
+.class-z-index-1000 {
+  z-index: 10000;
 }
 
 .lin-top {
