--- a/src/modules/pages/general/General.scss
+++ b/src/modules/pages/general/General.scss
@@ -143,7 +143,7 @@
   .row-3 {
     width: 100%;
     height: auto;
-    background: url(../../../bases/assets/bg5.png);
+    background: url(../../../bases/assets/bg5_1.png);
 
     .tit-block {
       .title-h3 {
