--- a/src/modules/components/[0_grouped_0]-Profile/my-profile/My-profile.module.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/my-profile/My-profile.module.scss
@@ -1,5 +1,18 @@
 @import "../../../../Variables";
 
+@keyframes animationBtn {
+  0% {
+    width: 0;
+    height: 0;
+    opacity: 0;
+  }
+  100% {
+    width: 100%;
+    height: 100%;
+    opacity: 1;
+  }
+}
+
 .profileBlock {
   width: 100%;
   height: 100%;
@@ -67,6 +80,63 @@
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
+
+        .wrapperIp {
+          display: flex;
+          flex-direction: row;
+          justify-content: center;
+          background: $color-15;
+          border-radius: 12px;
+          width: 100%;
+          max-width: 90%;
+          height: 48px;
+          padding: 0 25px;
+          margin: 0 auto 8px auto;
+
+          .text {
+            line-height: 24px;
+            height: 24px;
+            margin: auto 0;
+            font-family: $fontCustom2;
+            font-weight: 400;
+            font-size: 16px;
+          }
+
+          .copy {
+            font-size: 14px;
+            font-weight: inherit;
+            font-family: inherit;
+            height: 28px;
+            line-height: 28px;
+            width: auto;
+            outline: none;
+            margin: auto 0 auto 10px;
+            color: $color-3;
+            padding: 0 5px;
+            cursor: pointer;
+            transition: all 0.35s ease;
+            background: none;
+            border-radius: 0;
+            border: 1px solid $color-15;
+
+            svg {
+              path {
+                fill: currentColor;
+              }
+            }
+
+            &:hover {
+              color: $color-8;
+              background: $color-11;
+              border: 1px solid $color-21;
+              border-radius: 5px;
+            }
+
+            .ico {
+              animation: animationBtn 2s both;
+            }
+          }
+        }
       }
     }
 
