--- a/src/modules/components/[0_grouped_0]-Profile/achievement/Achievement.module.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/achievement/Achievement.module.scss
@@ -24,6 +24,11 @@ $param: 90px;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
+    overflow: auto;
+
+    &::-webkit-scrollbar {
+      width: 4px;
+    }
 
     .oneAchievementWrapper {
       display: flex;
@@ -150,7 +155,7 @@ $param: 90px;
 
     .activeAchievement {
       color: #66ff66 !important;
-      width: 900px;
+      width: 1100px;
       height: 200px;
 
       .achievementView {
@@ -176,6 +181,9 @@ $param: 90px;
         opacity: 1;
         position: absolute;
       }
+    }
+
+    .notDone{
     }
   }
 }
