--- a/src/modules/components/[0_grouped_0]-Manager/Faq-editor/Faq-editor.module.scss
+++ b/src/modules/components/[0_grouped_0]-Manager/Faq-editor/Faq-editor.module.scss
@@ -1,43 +1,217 @@
 @import "../../../../Variables.scss";
 
 .faqEditorWrapper {
-  color: $color-3;
-}
-
-.editor {
-  background: $color-2;
-  border: 1px solid $color-22;
-  min-height: 500px;
-  padding: 8px;
-  margin-top: 8px;
-}
-
-.btn {
-  margin: 3px;
-  width: 36px;
-  height: 36px;
-  line-height: 32px;
-  background: $color-2;
-  border: 1px solid $color-22;
-  color: $color-3;
-  cursor: pointer;
-}
-
-.wrapperBox {
   display: flex;
   flex-direction: column;
-  position: relative;
   width: 100%;
-  height: 100%;
+  height: auto;
+
+  .topLine {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 100%;
+    height: auto;
+
+    .textInput {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      width: 100%;
+      height: auto;
+
+      .inputStyle {
+        width: 100%;
+        height: 28px;
+        margin: 4px 0;
+        background: $color-7;
+        border: 0.5px solid $color-22;
+        border-radius: 4px;
+        outline: none;
+        transition: all 0.25s ease-in-out;
+        color: $color-8;
+        padding: 0 8px;
+
+        &:hover,
+        &:focus,
+        &:active {
+          outline: none;
+          background: $color-21;
+        }
+      }
+
+      .viewBox {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        width: 100%;
+        height: auto;
+
+        .checkboxView {
+          height: 16px;
+          width: 16px;
+          margin: 4px 0;
+          background-color: $color-7 !important;
+          border: 0.5px solid $color-22;
+          border-radius: 4px;
+          color: $color-3;
+          cursor: pointer;
+          outline: none;
+        }
+
+        .checkboxName {
+          height: 24px;
+          line-height: 24px;
+          width: auto;
+          font-size: 14px;
+          font-weight: 400;
+          font-family: $fontCustom2;
+          margin-left: 8px;
+          color: $color-3;
+        }
+      }
+    }
+
+    .actionWrapper {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      width: 100%;
+      height: 32px;
+      margin: 8px 0;
+
+      .actions {
+        width: auto;
+        height: 32px;
+        margin: auto 8px;
+        padding: 0 8px;
+        line-height: 32px;
+        text-align: center;
+        background: $color-7;
+        border: 0.5px solid $color-22;
+        border-radius: 8px;
+        transition: all 0.25s ease-in-out;
+        color: $color-8;
+        cursor: pointer;
+        font-size: 14px;
+
+        &:hover {
+          background: $color-21;
+        }
+      }
+    }
+  }
+
+  .bottomLine {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 100%;
+    height: auto;
+
+    .wrapperBox {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      height: 100%;
+      background: $color-7;
+      border: 1px solid $color-2;
+      border-radius: 8px;
+
+      .editingPanel {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        border-bottom: 1px solid $color-2;
+        width: 100%;
+
+        .btn {
+          margin: 3px;
+          width: 32px;
+          height: 32px;
+          padding: 3px;
+          line-height: 32px;
+          font-weight: 400;
+          font-size: 14px;
+          background: transparent;
+          border: none;
+          border-radius: 4px;
+          color: $color-3;
+          cursor: pointer;
+          transition: all 0.35s ease;
+
+          &:hover {
+            background: $color-2;
+            color: $color-8;
+
+            svg {
+              path {
+                fill: currentColor;
+              }
+            }
+          }
+        }
+      }
+
+      .editor {
+        min-height: 600px;
+        max-height: 700px;
+        padding: 8px;
+        overflow: auto;
+
+        &::-webkit-scrollbar {
+          width: 4px !important;
+        }
+      }
+    }
+  }
+
+  .mainText {
+    height: auto;
+    min-height: 24px;
+    color: $color-3;
+    line-height: 24px;
+    font-size: 14px;
+  }
+
+  .pingSpan {
+    background: $color-22;
+    color: $color-3;
+    border-radius: 4px;
+    font-size: 13px;
+    width: auto;
+    padding: 0 4px;
+    display: inline-block;
+  }
 }
 
 .portal {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  background: $color-22;
+  padding: 4px;
+  border-radius: 4px;
   position: absolute;
-  width: auto;
-  height: auto;
-  background: #224e69;
-  padding: 8px;
-  border-radius: 8px;
-  top: 30%;
-  left: 10%;
+  top: -9999px;
+  left: -9999px;
+  z-index: 1;
+
+  .labelLine {
+    width: auto;
+    color: $color-3;
+    height: 20px;
+    line-height: 20px;
+    margin: 2px 0;
+    padding: 1px 3px;
+    border-radius: 4px;
+    transition: all 0.35s ease;
+
+    &:hover {
+    background: #66ff66;
+    }
+  }
 }
+
+
+
