--- a/src/modules/pages/faq/Faq.scss
+++ b/src/modules/pages/faq/Faq.scss
@@ -122,7 +122,7 @@
 
               .list-one {
                 width: 100%;
-                height: 100%;
+                height: auto;
                 display: flex;
                 flex-direction: column;
                 margin-bottom: 5px;
@@ -138,6 +138,7 @@
                   display: flex;
                   justify-content: space-between;
                   padding: 16px;
+                  line-height: 1.35;
                   background: transparent;
                   border: 0.5px solid $color-22;
                   border-radius: 6px;
@@ -165,9 +166,10 @@
                 .one-content-h3 {
                   width: 100%;
                   max-height: 0;
+                  line-height: 1.5;
                   color: $color-3;
                   font-weight: 400;
-                  font-size: 16px;
+                  font-size: 15px;
                   background: $color-7;
                   transition: all 0.25s ease;
                   opacity: 0;
