--- a/src/modules/pages/cab/Cab.module.scss
+++ b/src/modules/pages/cab/Cab.module.scss
@@ -36,6 +36,18 @@
     flex-direction: row;
     border: 1px solid $color-2;
     border-radius: 5px;
+    position: relative;
+
+    .banned {
+      position: absolute;
+      left: 0;
+      right: 0;
+      margin: auto 0;
+      scale: 0.95;
+      top: 50%;
+      bottom: 50%;
+      transform: translate(-50%, 0, -50%);
+    }
 
     .buttonWrapper {
       display: none;
