--- a/src/modules/pages/shopkeepers/Shopkeepers.module.scss
+++ b/src/modules/pages/shopkeepers/Shopkeepers.module.scss
@@ -50,14 +50,15 @@
       flex-direction: column;
       justify-content: flex-start;
       width: 300px;
-      height: auto;
-      max-height: 750px;
-      min-height: max-content;
+      height: min-content;
+      max-height: 770px;
+      min-height: min-content;
       border: 1px solid $color-21;
       border-radius: 5px;
       background: $color-20;
       position: sticky;
       top: 40px;
+      transition: height 0.35s ease;
 
       .searchShop {
         width: 100%;
@@ -84,7 +85,7 @@
         flex-direction: column;
         width: 100%;
         height: auto;
-        max-height: 718px;
+        max-height: 680px;
         min-height: max-content;
         padding: 8px 4px;
         overflow: auto;
@@ -112,6 +113,28 @@
         .activeShop {
           background-color: $color-4 !important;
           color: $color-2 !important;
+        }
+      }
+
+      .wrapperButton {
+        border-top: 1px solid $color-21;
+        display: flex;
+        flex-direction: column;
+        width: auto;
+        height: auto;
+
+        .scrollTop {
+          height: 30px;
+          line-height: 30px;
+          background: $color-20;
+          color: $color-8;
+          text-align: center;
+          font-size: 32px;
+          width: 80%;
+          margin: 10px auto;
+          border-radius: 4px;
+          border: 1px solid $color-2;
+          cursor: pointer;
         }
       }
     }
