--- a/src/modules/pages/shopkeepers/Shopkeepers.module.scss
+++ b/src/modules/pages/shopkeepers/Shopkeepers.module.scss
@@ -206,6 +206,7 @@
         color: $color-8;
         padding-left: 10px;
         padding-right: 10px;
+        margin: 10px auto 0 auto;
 
         &:hover,
         &:focus,
