--- a/src/modules/pages/auth/Auth.module.scss
+++ b/src/modules/pages/auth/Auth.module.scss
@@ -1,8 +1,35 @@
 @import "src/Variables";
 
-.main-reg {
+.main_reg {
   display: flex;
   flex-direction: column;
   width: auto;
   height: auto;
+}
+
+@media screen and (max-width: 1600px) {
+}
+
+@media screen and (max-width: 1400px) {
+}
+
+@media screen and (max-width: 1280px) {
+}
+
+@media screen and (max-width: 1024px) {
+}
+
+@media screen and (max-width: 960px) {
+}
+
+@media screen and (max-width: 768px) {
+}
+
+@media screen and (max-width: 640px) {
+}
+
+@media screen and (max-width: 480px) {
+}
+
+@media screen and (max-width: 360px) {
 }
