--- a/src/modules/components/auth-comp/Auth-comp.module.scss
+++ b/src/modules/components/auth-comp/Auth-comp.module.scss
@@ -62,7 +62,8 @@
           .avatar {
             width: 130px;
             height: 130px;
-            border-radius: 6px;
+            border-radius: 8px;
+            padding: 4px;
           }
 
           .main_info {
@@ -186,6 +187,7 @@
             .avatar {
               width: 100px;
               height: 100px;
+              padding: 2px;
             }
 
             .main_info {
