--- a/src/modules/components/notifications/Notifications.module.scss
+++ b/src/modules/components/notifications/Notifications.module.scss
@@ -11,11 +11,14 @@
 
   .span_icon {
     width: 24px;
-    height: 24px;
+    min-width: 24px;
+    height: auto;
     margin: auto 0;
+    padding: 2px;
   }
 
   .notifications_information {
+    width: auto;
     padding-left: 4px;
     height: auto;
     min-height: 24px;
@@ -62,8 +65,6 @@
 @media screen and (max-width: 480px) {
   .notifications_container {
     height: auto;
-    line-height: 20px;
-    min-height: 40px;
     max-height: 150px;
 
     .notifications_information {
