--- a/src/modules/components/[0_grouped_0]-Maps-all-comp/mini-marker-components/map-view-block/MapViewBlock.module.scss
+++ b/src/modules/components/[0_grouped_0]-Maps-all-comp/mini-marker-components/map-view-block/MapViewBlock.module.scss
@@ -41,11 +41,11 @@
       justify-content: flex-start;
       margin: auto 0;
 
-      .elementIndex {
+      .index_count {
         display: none;
       }
 
-      .elementH3Name {
+      .element_name {
         width: auto;
         min-height: 40px;
         max-height: none;
@@ -61,7 +61,7 @@
     }
   }
 
-  .action_column {
+  .action_box {
     width: 100%;
     min-width: 44px;
     max-width: 44px;
@@ -86,7 +86,7 @@
   .one_maps_element {
     .link_to {
       .wrapper {
-        .elementH3Name {
+        .element_name {
           min-height: 36px;
           line-height: 36px;
         }
@@ -104,7 +104,7 @@
 
     .link_to {
       .wrapper {
-        .elementH3Name {
+        .element_name {
           font-size: 13px;
           min-height: 28px;
           line-height: 28px;
@@ -126,7 +126,7 @@
       .wrapper {
         flex-direction: column;
 
-        .elementH3Name {
+        .element_name {
           width: 100%;
           min-width: 0;
           max-width: none;
@@ -138,7 +138,7 @@
       }
     }
 
-    .action_column {
+    .action_box {
       min-width: 0;
       max-width: none;
       flex-direction: row;
