--- a/src/modules/components/[0_grouped_0]-Maps-all-comp/maps-elements-add.module.scss
+++ b/src/modules/components/[0_grouped_0]-Maps-all-comp/maps-elements-add.module.scss
@@ -1,25 +1,12 @@
 @import "src/Variables";
 
-@keyframes ErrorsViewBox {
-  0% {
-    opacity: 0;
-    height: 0;
-    width: auto;
-  }
-  100% {
-    opacity: 1;
-    width: auto;
-    height: auto;
-  }
-}
-
 .box_map_add_wrapper {
   display: flex;
   flex-direction: row;
   width: 100%;
   height: 100%;
 
-  .columns_add_one {
+  .form_wrapper {
     display: flex;
     flex-direction: column;
     width: 350px;
@@ -28,32 +15,26 @@
     height: auto;
     margin-right: 8px;
 
-    .row_wrapper_content {
+    .form {
       display: flex;
       flex-direction: column;
       width: 100%;
       height: auto;
       margin-bottom: 16px;
-    }
 
-    .coordinates_wrapper {
-      display: flex;
-      flex-direction: column;
-      width: 100%;
-      height: auto;
-
-      .block_row {
+      .coordinates {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         width: 100%;
         height: auto;
-        margin-bottom: 18px;
+        margin: 0 0 18px 0;
 
-        .row_wrapper_content_custom {
+        .row_block {
           display: flex;
           flex-direction: row;
-          width: 48%;
+          justify-content: flex-start;
+          width: 46%;
         }
       }
     }
@@ -68,7 +49,7 @@
     }
   }
 
-  .columns_add_two {
+  .map_wrapper {
     display: flex;
     width: 100%;
     height: 100%;
@@ -94,22 +75,22 @@
       width: 4px !important;
     }
 
-    .columns_add_one {
+    .form_wrapper {
       height: auto;
       min-height: auto;
       max-height: none;
       width: 100%;
       min-width: 0;
       max-width: none;
-      padding: 0 8px 8px 0;
+      padding: 0 8px 12px 0;
       margin: 0;
 
       .actions_box {
-        margin-top: 50px;
+        margin-top: 0;
       }
     }
 
-    .columns_add_two {
+    .map_wrapper {
       height: auto;
       min-height: 750px;
       max-height: 950px;
@@ -121,12 +102,12 @@
 
 @media screen and (max-width: 960px) {
   .box_map_add_wrapper {
-    .columns_add_one {
-      padding: 0 0 8px 0;
+    .form_wrapper {
+      padding: 0 0 12px 0;
       min-height: 0;
     }
 
-    .columns_add_two {
+    .map_wrapper {
       height: 800px;
       min-height: 800px;
       max-height: 800px;
